--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nishchay Garg | Profile</title>
-    <meta property="og:url" content="nicechay.github.io">
+    <meta property="og:url" content="https://nicechay.github.io">
     <meta property="og:title" content="\o/">
     <meta property="og:description" content="Hey there, Reflection!">
-    <meta property="og:image" content="http://nicechay.github.io/preview.png">
+    <meta property="og:image" content="https://nicechay.github.io/preview.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 	<style>
 	body,div,p {
@@ -127,6 +127,12 @@ a {
 
 .nishcard .pickup.show {
   opacity: 1 !important;
+}
+
+@media (max-width: 600) {
+ #background {
+ display:none;
+ }
 }
 </style>
   </head>
